--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +17,17 @@
   "bugs": {
     "url": "https://github.com/concepta-emanuel/graphql-intro/issues"
   },
-  "homepage": "https://github.com/concepta-emanuel/graphql-intro#readme"
+  "homepage": "https://github.com/concepta-emanuel/graphql-intro#readme",
+  "dependencies": {
+    "babel": "^6.1.18",
+    "babel-cli": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-register": "^6.2.0",
+    "body-parser": "^1.14.1",
+    "express": "^4.13.3",
+    "graphql": "^0.4.13",
+    "kerberos": "0.0.17",
+    "mongoose": "^4.2.8",
+    "underscore": "^1.8.3"
+  }
 }
